Prevent overflow on ul li starter char elements

--- a/src/css/page.css
+++ b/src/css/page.css
@@ -22,9 +22,14 @@
 		}
 		li {
 			margin-block: 4px;
-			
+			list-style-position: outside;
+			position: relative;
+			margin-left: 16px;
+
 			&:before {
-				content: "• "
+				content: "• ";
+				position: absolute;
+				right: calc(100% + 8px);
 			}
 		}
 
